--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -21,7 +21,7 @@
     padding: 0;
 }
 
-.contact__item {
+/* .contact__item {
     display: flex;
     align-items: center;
     width: 300px;
@@ -33,4 +33,4 @@
     border-color: transparent;
     background-color: rgb(190, 66, 66);
     cursor: pointer;
-}
+} */
